--- a/Test Jeu de Fauves.cbp
+++ b/Test Jeu de Fauves.cbp
@@ -32,11 +32,15 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="bloqueur.cpp" />
+		<Unit filename="bloqueur.h" />
 		<Unit filename="carte.cpp" />
 		<Unit filename="carte.h" />
 		<Unit filename="doctest.h" />
 		<Unit filename="element.cpp" />
 		<Unit filename="element.h" />
+		<Unit filename="fauve.cpp" />
+		<Unit filename="fauve.h" />
 		<Unit filename="joueur.cpp" />
 		<Unit filename="joueur.h" />
 		<Unit filename="mobile.cpp" />
